--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ path = "src/bin.rs"
 [dependencies]
 itertools = "0.10"
 lazy_static = "1"
+nalgebra = "0.29"
 num = "0.1"
 regex = "1"
 strum = { version = "0.23", features = ["derive"] }
