--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "aoc"
 version = "0.1.0"
 authors = ["James Cowgill <jcowgill@jcowgill.uk>"]
 edition = "2021"
+rust-version = "1.66"
 
 [lib]
 name = "aoclib"
