tests: Rewrite runner using rstest

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,6 @@ nalgebra = "0.34"
 num = "0.4"
 regex = "1"
 strum = { version = "0.27", features = ["derive"] }
+
+[dev-dependencies]
+rstest = "0.26"
